# eftweb

./: .gitignore  README.md  app.py  config.py  fake-dstocks.tsv  fake-rsu.tsv  fake-stockoptions.tsv  forms.py  justfile  launcher.py  models.py  pyproject.toml  requirements.txt  routes.py  taxhelpers.py  taxsim.py
.github/workflows/: python-app.yml
app/: __init__.py
app/api/: __init__.py  api_routes.py
app/main/: __init__.py  forms.py  models.py  views.py
app/stocks/: __init__.py  forms.py  models.py  portfolio.py  ticker.py  tsv_importer.py  views.py
app/tax/: __init__.py  forms.py  models.py  views.py
app/templates/: base.html  index.html  project_stocks.html  project_stocks2.html  project_tax.html  stock_taxhelper.html  taxstatement.html
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  main.js
migrations/: env.py
migrations/versions/: 04940a50fc6b_add_direct_stock_plans.py  0d7f2edc76ac_introducing_charity_segment.py  0f6517250d4a_rename_rsuplan_column_to_approval_date.py  2126ef7ea728_add_is_deleted_field_to_projects.py  3c73c602245f_adding_a_generic_saleevent_table.py  3f01520aad12_re_create_directstocks_tables.py  442e83163d3a_remove_unused_table_stockoptions.py  467943ee26c7_introducing_tax_statements.py  560e06dc062c_adding_marital_status_and_children_.py  5649893ed72f_add_a_release_date_to_rsuvestings.py  65a6a9a7fe2d_adding_field_7cf_pme_investment.py  8b959405f629_adding_rsu_sale_table.py  8f82b83eb20e_remove_direct_stocks_table_before_re_.py  9045de055e80_adding_stock_sales_related_table.py  963839c51c5e_re_create_direct_stocks_to_point_to_.py  a0d37ef1690e_aligning_column_names_with_.py  a0de7c83776f_initial_migration.py  a2e04ac263d6_adding_reductions_and_shareholding_.py  a7c6de4ed921_adding_fixed_income_investments.py  b621f57d7290_introducing_charity_segment_2.py  b8bc26dc7ed2_adding_retirement_investment_segment.py  b8de5c784430_.py  ca3aea0fb58e_remove_directstocks_tables_before_re_.py  cd0501192701_adding_stock_related_tables.py  f17355249cdf_remove_unique_name_constraints_for_plans.py  ffa8aecac3d7_adding_stockoption_plan_and_vestings.py
templates/: index.html  project.html  project_stocks.html  project_tax.html  stock_taxhelper.html  taxstatement.html
tests/: fixture.py  test_main.py  test_project.py
(+17 files in other folders)
