[project]
name = "eftweb"
version = "0.1.0"
description = "A Web UI for easyfrenchtax"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask==2.1.3",
    "alembic==1.8.1",
    "Bootstrap-Flask==2.0.2",
    "click==8.1.3",
    "CurrencyConverter==0.18.6",
    "easyfrenchtax==0.1.1",
    "Flask-FontAwesome==0.1.5",
    "Flask-Migrate==3.1.0",
    "Flask-SQLAlchemy==2.5.1",
    "Flask-WTF==1.0.1",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.2",
    "Mako==1.2.4",
    "MarkupSafe==2.1.1",
    "python-dateutil==2.8.2",
    "six==1.16.0",
    "SQLAlchemy==1.4.39",
    "Werkzeug==2.1.2",
    "WTForms==3.0.1",
    "requests==2.31.0",
    "flask-cors",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
    "black",
    "mypy",
]

# Ruff configuration (fast Python linter and formatter)
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # Allow raising exceptions without from e
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"migrations/**/*.py" = ["E501", "F401"]  # Relax rules for migration files

[tool.ruff.lint.isort]
known-first-party = ["app"]

# Black configuration (code formatter)
[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    migrations
)/
'''

# Mypy configuration (type checker)
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
